--- a/index.html
+++ b/index.html
@@ -6,69 +6,31 @@
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Shoe configurator</title>
+    <title>Nike Air Force 1</title>
   </head>
   <body>
+    <h1>Nike Air Force 1</h1>
     <section id="svg"></section>
     <section id="palette">
-      <svg viewBox=" 0 0 842 100">
+      <h2>Choose a Color</h2>
+      <svg viewBox="0 0 800 150">
+        <circle class="colorBtn" cy="20%" cx="50" r="20" style="fill: red" />
         <circle
           class="colorBtn"
-          cy="50%"
-          cx="45"
-          r="40"
-          style="fill: #aa4c4c"
+          cy="20%"
+          cx="100"
+          r="20"
+          style="fill: orange"
         />
         <circle
           class="colorBtn"
-          cy="50%"
-          cx="135"
-          r="40"
-          style="fill: #d38080"
+          cy="20%"
+          cx="150"
+          r="20"
+          style="fill: yellow"
         />
-        <circle
-          class="colorBtn"
-          cy="50%"
-          cx="225"
-          r="40"
-          style="fill: #eec93c"
-        />
-        <circle
-          class="colorBtn"
-          cy="50%"
-          cx="315"
-          r="40"
-          style="fill: #eee39e"
-        />
-        <circle
-          class="colorBtn"
-          cy="50%"
-          cx="405"
-          r="40"
-          style="fill: #4c75aa"
-        />
-        <circle
-          class="colorBtn"
-          cy="50%"
-          cx="495"
-          r="40"
-          style="fill: #9ecbfe"
-          opacity="0.5"
-        />
-        <circle
-          class="colorBtn"
-          cy="50%"
-          cx="585"
-          r="40"
-          style="fill: #4b7946"
-        />
-        <circle
-          class="colorBtn"
-          cy="50%"
-          cx="675"
-          r="40"
-          style="fill: #6caa4c"
-        />
+        <circle class="colorBtn" cy="20%" cx="200" r="20" style="fill: green" />
+        <circle class="colorBtn" cy="20%" cx="250" r="20" style="fill: blue" />
       </svg>
     </section>
     <script src="script.js"></script>
